# All-purpose-Thread-Pool

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
benchmarks/: thread_pool_bench.cpp
cmake/: universal_thread_poolConfig.cmake.in
examples/: basic.cpp
include/universal_thread_pool/: c_api.h  common.hpp  coroutine.hpp  executor.hpp  runtime.hpp  task_graph.hpp  task_group.hpp  thread_pool.hpp  thread_pool_core.hpp
src/: c_api.cpp  common.cpp  executor.cpp  runtime.cpp  task_graph.cpp  task_group.cpp  thread_pool.cpp
tests/: thread_pool_tests.cpp
